Setup base django templates and static file serving.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@31 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/templates/index.html
+++ b/gobotany/templates/index.html
@@ -1,8 +1,7 @@
-<html>
-  <body>
+{% extends "base.html" %}
+{% block content %}
     <ul>
       <li><a href="taxon-search/">Taxon Search</a></li>
       <li><a href="pile-search/Lycophytes">Pile Search</a></li>
     </ul>
-  </body>
-</html>
+{% endblock %}
