--- a/gobotany/templates/pile_search.html
+++ b/gobotany/templates/pile_search.html
@@ -1,8 +1,5 @@
-<html>
-  <head>
-    <title>{{ pile|title }} Search</title>
-  </head>
-  <body>
+{% extends "base.html" %}
+{% block content %}
     {% if data %}
     <h1>Found {{ data|length }} matching species</h1>
     <ul>
@@ -26,5 +23,4 @@
       <input type="submit" value="Submit" />
     </form>
     {% endif %}
-  </body>
-</html>
+{% endblock %}
