--- a/gobotany/templates/taxon_search.html
+++ b/gobotany/templates/taxon_search.html
@@ -1,5 +1,6 @@
-<html>
-  <body>
+{% extends "base.html" %}
+{% block content %}
+
     <fieldset>
       <legend>Search for Species</legend>
       <form method="POST">
@@ -25,3 +26,4 @@
     {% endif %}
   </body>
 </html>
+{% endblock %}
