Add support for glossary import with images and a glossary index page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@38 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/templates/index.html
+++ b/gobotany/templates/index.html
@@ -3,5 +3,6 @@
     <ul>
       <li><a href="taxon-search/">Taxon Search</a></li>
       <li><a href="pile-search/Lycophytes">Pile Search</a></li>
+      <li><a href="glossary">Glossary Index</a></li>
     </ul>
 {% endblock %}
