--- a/gobotany/static/style.css
+++ b/gobotany/static/style.css
@@ -1,1 +1,5 @@
 /* nothing */
+#glossary dt { clear: both }
+#glossary .GlossaryImage { float: left; }
+#glossary dd { height: 50px; margin-left: 0;}
+#glossary .GlossaryPadding { float: left; width: 50px; height: 50px;}
