--- a/gobotany/templates/base.html
+++ b/gobotany/templates/base.html
@@ -2,11 +2,23 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <link rel="stylesheet" href="/static/style.css" />
     <title>{% block title %}Default{% endblock %}</title>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dojo/dojo.xd.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      djConfig = {
+          debugAtAllCosts: true,
+      };
+    </script>
+
+    {% block js %}{% endblock %}
+
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dijit/themes/tundra/tundra.css" type="text/css" media="screen" title="Dijit Tundra Style" charset="utf-8"> 
+
+    <link rel="stylesheet" href="/static/style.css" />
   </head>
 
-  <body>
+  <body class="tundra">
     <div id="content">
       {% block content %}{% endblock %}
     </div>
