--- a/gobotany/templates/base.html
+++ b/gobotany/templates/base.html
@@ -4,12 +4,18 @@
   <head>
     <title>{% block title %}Default{% endblock %}</title>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dojo/dojo.xd.js" type="text/javascript"></script>
     <script type="text/javascript">
-      djConfig = {
-          debugAtAllCosts: true,
-      };
+	djConfig = { 
+           isDebug: true,
+           debugAtAllCosts:true,
+           useXDomain: false,
+           baseUrl: 'http://localhost:8000',
+           modulePaths: {
+               gobotany: '/static/gobotany'
+           },
+       };
     </script>
+    <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dojo/dojo.xd.js" type="text/javascript"></script>
 
     {% block js %}{% endblock %}
 
