Updated to use the all() attribute of a manager.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@44 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/templates/pile_search.html
+++ b/gobotany/templates/pile_search.html
@@ -3,7 +3,7 @@
     {% if data %}
     <h1>Found {{ data|length }} matching species</h1>
     <ul>
-      {% for r in data %}
+      {% for r in data.all %}
       <li>{{ r }}
       <ul>
         {% for cv in r.character_values.all %}
