Pile search page now shows matches/exclusion counts
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@45 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/templates/pile_search.html
+++ b/gobotany/templates/pile_search.html
@@ -1,4 +1,12 @@
 {% extends "base.html" %}
+{% block js %}
+<script type="text/javascript">
+dojo.require('gobotany.piles');
+dojo.addOnLoad(function() {
+    gobotany.piles.init();
+});
+</script>
+{% endblock %}
 {% block content %}
     {% if data %}
     <h1>Found {{ data|length }} matching species</h1>
@@ -17,10 +25,11 @@
     {% if submitted %}
     <h2>No matching species were found please select fewer characters</h2>
     {% endif %}
-    <form action="{{ pile }}" method="post">
+    <form action="{{ pile }}" method="post" id="characters_form">
       {% csrf_token %}
       {{ form.as_p }}
       <input type="submit" value="Submit" />
+      
     </form>
     {% endif %}
 {% endblock %}
