Initial django-cms integration, still a work in progress
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@48 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/templates/index.html
+++ b/gobotany/templates/index.html
@@ -4,5 +4,6 @@
       <li><a href="taxon-search/">Taxon Search</a></li>
       <li><a href="pile-search/Lycophytes">Pile Search</a></li>
       <li><a href="glossary">Glossary Index</a></li>
+      <li><a href="cms/">CMS</a></li>
     </ul>
 {% endblock %}
