Turn off language chooser on CMS pages
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@53 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/templates/base_cms.html
+++ b/gobotany/templates/base_cms.html
@@ -2,6 +2,8 @@
 
 <div id="menu">{% show_menu 0 100 100 100 %}</div>
 <div id="breadcrumb">{% show_breadcrumb %}</div>
+{% comment %}
 <div id="languagechooser">{% language_chooser %}</div>
+{% endcomment %}
 <div id="content">{% placeholder "content" %}</div>
 <div id="left_column">{% placeholder "left_column" %}</div>
