Add taxon image support into API calls.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@56 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/templates/pile_search.html
+++ b/gobotany/templates/pile_search.html
@@ -13,6 +13,11 @@ dojo.addOnLoad(function() {
     <ul>
       {% for r in data.all %}
       <li>{{ r }}
+      {% with r.get_default_image as image %}
+      {% if image %}
+      <img class="TaxonImage" alt="{{ image.alt }}" src="{{image.image.url}}" />
+      {% endif %}
+      {% endwith %}
       <ul>
         {% for cv in r.character_values.all %}
         <li>{{ cv }}</li>
