Use django to calculate the template base url for django
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@58 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/templates/base.html
+++ b/gobotany/templates/base.html
@@ -9,7 +9,7 @@
            isDebug: true,
            debugAtAllCosts:true,
            useXDomain: false,
-           baseUrl: 'http://localhost:8000',
+           baseUrl: 'http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/',
            modulePaths: {
                gobotany: '/static/gobotany'
            },
