--- a/gobotany/templates/index.html
+++ b/gobotany/templates/index.html
@@ -4,6 +4,6 @@
       <li><a href="taxon-search/">Taxon Search</a></li>
       <li><a href="pile-search/Lycophytes">Pile Search</a></li>
       <li><a href="glossary">Glossary Index</a></li>
-      <li><a href="cms/">CMS</a></li>
+      <li><a href="admin/gobotany/taxon/">Taxon/Image Admin</a></li>
     </ul>
 {% endblock %}
