Small fix for the taxon dropdown
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@72 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/templates/taxon_search.html
+++ b/gobotany/templates/taxon_search.html
@@ -12,7 +12,8 @@ dojo.addOnLoad(function() {
 
 <fieldset>
 
-<select name="select" id="taxon_select">
+<select name="select" id="taxon_select" disabled="true">
+<option value="">Loading...</option>
 </select>
 
   <legend>Search for Species</legend>
