user story 13: demo for image retrieval api
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@78 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/templates/index.html
+++ b/gobotany/templates/index.html
@@ -5,5 +5,6 @@
       <li><a href="pile-search/Lycophytes">Pile Search</a></li>
       <li><a href="glossary">Glossary Index</a></li>
       <li><a href="admin/gobotany/taxon/">Taxon/Image Admin</a></li>
+      <li><a href="canonical-images">Image Search</a></li>
     </ul>
 {% endblock %}
