First batch of changes for the pile and pile group info api's and demo page
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@105 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/templates/index.html
+++ b/gobotany/templates/index.html
@@ -2,7 +2,8 @@
 {% block content %}
     <ul>
       <li><a href="taxon-search/">Taxon Search</a></li>
-      <li><a href="pile-search/Lycophytes">Pile Search</a></li>
+      <li><a href="piles-pile-groups">Piles and Pile Groups</a></li>
+      <li><a href="pile-search/Lycophytes">Pile Querying</a></li>
       <li><a href="glossary">Glossary Index</a></li>
       <li><a href="admin/gobotany/taxon/">Taxon/Image Admin</a></li>
       <li><a href="canonical-images">Image Search</a></li>
