--- a/gobotany/static/style.css
+++ b/gobotany/static/style.css
@@ -3,3 +3,13 @@
 #glossary .GlossaryImage { float: left; }
 #glossary dd { height: 50px; margin-left: 0;}
 #glossary .GlossaryPadding { float: left; width: 50px; height: 50px;}
+
+
+.pile-selection fieldset {
+    width: 20%;
+    float: left;
+}
+
+.pile-selection fieldset select {
+    width: 100%;
+}
