Created a simple form through which curious users can exercise the new ability of the REST API to list species by pile group, pile, or genus.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@124 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/templates/index.html
+++ b/gobotany/templates/index.html
@@ -7,5 +7,7 @@
       <li><a href="glossary">Glossary Index</a></li>
       <li><a href="admin/gobotany/taxon/">Taxon/Image Admin</a></li>
       <li><a href="canonical-images">Image Search</a></li>
+      <li><a href="species-lists/">List species
+          in a pile group, pile, or genus (through a REST call)</a></li>
     </ul>
 {% endblock %}
