Turned "gobotany" into a project containing two Django apps inside.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@130 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/index.html
+++ b/gobotany/core/templates/index.html
@@ -5,7 +5,7 @@
       <li><a href="piles-pile-groups">Piles and Pile Groups</a></li>
       <li><a href="pile-search/Lycophytes">Pile Querying</a></li>
       <li><a href="glossary">Glossary Index</a></li>
-      <li><a href="admin/gobotany/taxon/">Taxon/Image Admin</a></li>
+      <li><a href="admin/core/taxon/">Taxon/Image Admin</a></li>
       <li><a href="canonical-images">Image Search</a></li>
       <li><a href="species-lists/">List species
           in a pile group, pile, or genus (through a REST call)</a></li>
