Added a "simplekey" Django app whose views live under "/simple".
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@132 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/index.html
+++ b/gobotany/core/templates/index.html
@@ -9,5 +9,6 @@
       <li><a href="canonical-images">Image Search</a></li>
       <li><a href="species-lists/">List species
           in a pile group, pile, or genus (through a REST call)</a></li>
+      <li><a href="simple/">Simple Key app</a></li>
     </ul>
 {% endblock %}
