Created a model for new "collection" pages to live in ("collection" is what these top-level groups are currently called in the mockup PDF), some URLs for them to live at, and a first sample collection page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@133 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -1,1 +1,10 @@
-Welcome to the simple key!
+<html>
+  <body>
+    <p>
+      Welcome to the simple key Django app.
+    </p>
+    <p>
+      <a href="collections/start">Start identifying!</a>
+    </p>
+  </body>
+</html>
