You can now navigate through the Collections down to Piles.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@135 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -4,7 +4,7 @@
       Welcome to the simple key Django app.
     </p>
     <p>
-      <a href="collections/start">Start identifying!</a>
+      <a href="collections/start/">Start identifying!</a>
     </p>
   </body>
 </html>
