Created a means of storing "blurbs" in the database where users can edit them, so that they can provided editable bits of content like instructions and exhortations.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@138 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -3,6 +3,9 @@
     <p>
       Welcome to the simple key Django app.
     </p>
+    <div>
+      {{ blurb }}
+    </div>
     <p>
       <a href="collections/start/">Start identifying!</a>
     </p>
