Made the blurb on the index page "rich text" by turning off HTML escaping.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@139 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -4,7 +4,7 @@
       Welcome to the simple key Django app.
     </p>
     <div>
-      {{ blurb }}
+      {{ blurb|safe }}
     </div>
     <p>
       <a href="collections/start/">Start identifying!</a>
