Add family and genus text boxes and buttons to results page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@140 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -3,5 +3,19 @@
 {% block content %}
     <p>Plant Identifier</p>
     <h1>(Collection: Sub-collection)</h1>
-    <p>Filters and results here</p>
+    <div id='global-filter'>
+        <form>
+            <p>Family<br>
+            <input type="text">
+            <input type="submit" value="Go">
+            </p>
+        </form>
+        <form>
+            <p>Genus<br>
+            <input type="text">
+            <input type="submit" value="Go">
+            </p>
+        </form>
+    </div>
+    <p id='main'>Filters and results here</p>
 {% endblock %}
