Results page: add pile and optional pile group to URL, heading, and page title.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@141 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -1,8 +1,17 @@
 {% extends "simplekey/base.html" %}
-{% block title %}Results{% endblock %}
+{% block title %}
+{% if pile_group %}
+  {{ pile_group.name }}:
+{% endif %}
+{{ pile.name }}
+{% endblock %}
 {% block content %}
     <p>Plant Identifier</p>
-    <h1>(Collection: Sub-collection)</h1>
+    <h1>
+        {% if pile_group %}
+          {{ pile_group.name }}:
+        {% endif %}
+        {{ pile.name }}</h1>
     <div id='global-filter'>
         <form>
             <p>Family<br>
