Moved into the Collection the know-how for interpreting its "contents".
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@143 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/collection.html
+++ b/gobotany/simplekey/templates/simplekey/collection.html
@@ -4,31 +4,32 @@
     <p>
       Which of the following best describes your plant?
     </p>
-    {% for choice in choices %}
-      {% if choice.type == 'collection' %}
+    {% for child in collection.get_children %}
+      {% if child.kind == 'collection' %}
         <div class="collection">
-          <h2><a href="{{ choice.url }}">{{ choice.target.name }}</a></h2>
+          <h2><a href="{{ child.url }}">{{ child.target.name }}</a></h2>
         </div>
       {% endif %}
-      {% if choice.type == 'pile' %}
+      {% if child.kind == 'pile' %}
         <div>
           <h2>
-            {% if choice.target.friendly_name %}
-              <a href="{{ choice.url }}"
-                 >{{ choice.target.friendly_name }}</a>
-              ({{ choice.target.name }})
+            {% if child.target.friendly_name %}
+              <a href="{{ child.url }}"
+                 >{{ child.target.friendly_name }}</a>
+              ({{ child.target.name }})
             {% else %}
-              <a href="{{ choice.url }}">{{ choice.target.name }}</a>
+              <a href="{{ child.url }}">{{ child.target.name }}</a>
             {% endif %}
           </h2>
         </div>
       {% endif %}
-      {% if choice.type == 'else' %}
+      {% if child.kind == 'else' %}
         <div>
           None of these look right.
-          <a href="{{ choice.url }}">Give me more choices »</a>
+          <a href="{{ child.url }}">Give me more choices »</a>
         </div>
       {% endif %}
     {% endfor %}
+    
   </body>
 </html>
