--- a/gobotany/simplekey/templates/simplekey/pile.html
+++ b/gobotany/simplekey/templates/simplekey/pile.html
@@ -5,5 +5,9 @@
       Here is where we will put the big filtering JavaScript app
       for the pile named “{{ pile.name }}”.
     </p>
+
+    <h2>Subway map</h2>
+    {% include "simplekey/subway.html" %}
+
   </body>
 </html>
