Decided that a Collection title looks better than a '?' in the subway!
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@146 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/subway.html
+++ b/gobotany/simplekey/templates/simplekey/subway.html
@@ -12,7 +12,7 @@
           {% if station.item.name %}
             {{ station.item.name }}
           {% else %}
-            ?
+            {{ station.item.title }}
           {% endif %}
         </a>
       </li>
