--- a/gobotany/simplekey/templates/simplekey/collection.html
+++ b/gobotany/simplekey/templates/simplekey/collection.html
@@ -5,9 +5,15 @@
       Which of the following best describes your plant?
     </p>
     {% for child in children %}
-      <div class="{{ child.class }}">
-        <h2><a href="{{ child.url }}">{{ child.friendly_name }}</a></h2>
-      </div>
+      {% if child.kind == 'else' %}
+        <div class="{{ child.class }}">
+          <h2><a href="{{ child.url }}">Give me more choices »</a></h2>
+        </div>
+      {% else %}
+        <div class="{{ child.class }}">
+          <h2><a href="{{ child.url }}">{{ child.friendly_name }}</a></h2>
+        </div>
+      {% endif %}
     {% endfor %}
 
     <h2>Subway map</h2>
