Continue creating skeleton results page with the various areas needed.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@149 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/base.html
+++ b/gobotany/simplekey/templates/simplekey/base.html
@@ -6,10 +6,13 @@
   </head>
   <body>
     <div id="content">
+      {% include "simplekey/header.html" %}
+      <p>Plant Identifier</p>
       {% block content %}{% endblock %}
+      {% include "simplekey/footer.html" %}
     </div>
     <script>
-	djConfig = { 
+    djConfig = { 
         isDebug: true,
         debugAtAllCosts:true,
         useXDomain: false,
