Add filters area to results page and populate it with the list of default filter names.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@154 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -32,3 +32,11 @@
   </div>
   {% include "simplekey/filters.html" %}
 {% endblock %}
+{% block js %}
+  <script>
+    dojo.require('gobotany.results');
+    dojo.addOnLoad(function() {
+      gobotany.results.init('{{ pile.name }}');
+    });
+  </script>
+{% endblock %}
