Commit change to JS code for the filter list to use Rocky's suggestion for getting the individual pile resource. Change to use new slug in pile REST URI.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@162 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -36,7 +36,7 @@
   <script>
     dojo.require('gobotany.results');
     dojo.addOnLoad(function() {
-      gobotany.results.init('{{ pile.name }}');
+      gobotany.results.init('{{ pile.slug }}');
     });
   </script>
 {% endblock %}
