Replaced the general idea of a "Collection" with a three-level hierarchy of "Page" objects that contain "PileGroup" pages that themselves have "Pile" pages beneath them.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@163 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -7,7 +7,7 @@
       {{ blurb|safe }}
     </div>
     <p>
-      <a href="collections/start/">Start identifying!</a>
+      <a href="1/">Start identifying!</a>
     </p>
   </body>
 </html>
