Add filter working area that opens when choosing a filter and closes when pressing a close button. Dummy values are listed so far.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@166 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/filter_working.html
+++ b/gobotany/simplekey/templates/simplekey/filter_working.html
@@ -1,3 +1,18 @@
 <div id="filter-working">
-(filter working area)
+  <!-- TODO: attach function call on init in results.js instead -->
+  <a class="close" href="#">[x]</a>
+  <h3 class="name"></h3>
+  <div class="values">
+    <form>
+      <label><input type="radio" name="char_name" value="value_1"> 
+      Value 1</label>
+      <label><input type="radio" name="char_name" value="value_2"> 
+      Value 2</label>
+      <label><input type="radio" name="char_name" value="value_3"> 
+      Value 3</label>
+    </form>
+  </div>
+  <div class="info">
+    <p>Select from the items at left to help narrow down to your plant.</p>
+  </div>
 </div>
