--- a/gobotany/simplekey/templates/simplekey/filters.html
+++ b/gobotany/simplekey/templates/simplekey/filters.html
@@ -1,5 +1,5 @@
 <div id="filters" aria-live="polite" aria-relevant="additions removals">
-  <p>Narrow your choice by making selections below</p>
+  <p>Narrow your results by making selections below.</p>
   <ul>
   </ul>
 </div>
