--- a/gobotany/simplekey/templates/simplekey/filter_working.html
+++ b/gobotany/simplekey/templates/simplekey/filter_working.html
@@ -1,18 +1,19 @@
 <div id="filter-working">
-  <!-- TODO: attach function call on init in results.js instead -->
   <a class="close" href="#">[x]</a>
   <h3 class="name"></h3>
   <div class="values">
     <form>
+      <label><input type="radio" name="char_name" value="" 
+                    checked> Don't Know</label>
       <label><input type="radio" name="char_name" value="value_1"> 
-      Value 1</label>
+      Value 1 (0)</label>
       <label><input type="radio" name="char_name" value="value_2"> 
-      Value 2</label>
+      Value 2 (0)</label>
       <label><input type="radio" name="char_name" value="value_3"> 
-      Value 3</label>
+      Value 3 (0)</label>
     </form>
   </div>
   <div class="info">
-    <p>Select from the items at left to help narrow down to your plant.</p>
+    <p>Choose a value at left to help narrow down to your plant.</p>
   </div>
 </div>
