--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -30,9 +30,9 @@
 {% endblock %}
 {% block js %}
   <script>
-    dojo.require('gobotany.results');
+    dojo.require('gobotany.sk.results');
     dojo.addOnLoad(function() {
-      gobotany.results.init('{{ pile.slug }}');
+      gobotany.sk.results.init('{{ pile.slug }}');
     });
   </script>
 {% endblock %}
