Finish implementation of User Story 3 tooltips.  Use new gobotany base template for pile selection pages.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@168 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/base.html
+++ b/gobotany/simplekey/templates/simplekey/base.html
@@ -2,9 +2,15 @@
   <head>
     <title>{% block title %}{% endblock %} - Plant Identifier - Go-Botany</title>
     <meta charset="utf-8">
+    {% block js %}{% endblock %}
+
+    <!-- do we want this? -->
+    <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojo/resources/dojo.css">
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dijit/themes/tundra/tundra.css" type="text/css" media="screen" title="Dijit Tundra Style" charset="utf-8"> 
     <link rel="stylesheet" href="/static/gobotany.css" />
+
   </head>
-  <body>
+  <body class="tundra">
     <div id="content">
       {% include "simplekey/header.html" %}
       <p>Plant Identifier</p>
@@ -20,9 +26,10 @@
         modulePaths: {
             gobotany: '/static/gobotany'
         },
+        parseOnLoad: true,
     };
     </script>
     <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojo/dojo.xd.js"></script>
-    {% block js %}{% endblock %}
+    {% block js_footer %}{% endblock %}
   </body>
 </html>
