--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -14,6 +14,13 @@ h1 {
     padding: 8px 0;
 }
 
+
+h2 {
+    font-size: 1em;
+    font-weight: normal;
+    margin: 5px 0;
+}
+
 p {
     font-size: 0.9em;
     margin: 5px 0;
@@ -123,4 +130,21 @@ p {
 #global-filter form {
     float: left;
     margin: 0 4em 0 1em;
+}
+
+.PileVideo {
+    height: 200px;
+}
+
+.PilePage .PileInfo {
+    display: none;
+}
+
+.PilePage li {
+    margin-left: 10px;
+    display: list-item;
+}
+
+.PilePage ul {
+    margin-left: 10px;
 }
