Add demo data for user story 3
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@169 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pile_tooltip.html
+++ b/gobotany/simplekey/templates/simplekey/pile_tooltip.html
@@ -18,9 +18,9 @@
         {% endif %}
         <div class="KeyCharacteristics">
           <h4>Key Characteristics</h4>
-          {{ pile.key_characteristics }}
+          {{ pile.key_characteristics|safe }}
         </div>
         <div class="NotableExceptions">
           <h4>Notable Exceptions</h4>
-          {{ pile.notable_exceptions }}
+          {{ pile.notable_exceptions|safe }}
         </div>
