Rename the top and bottom script sections in the base Django template. Update other templates.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@172 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/base.html
+++ b/gobotany/simplekey/templates/simplekey/base.html
@@ -2,7 +2,7 @@
   <head>
     <title>{% block title %}{% endblock %} - Plant Identifier - Go-Botany</title>
     <meta charset="utf-8">
-    {% block js %}{% endblock %}
+    {% block js_top %}{% endblock %}
 
     <!-- do we want this? -->
     <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojo/resources/dojo.css">
@@ -30,6 +30,6 @@
     };
     </script>
     <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojo/dojo.xd.js"></script>
-    {% block js_footer %}{% endblock %}
+    {% block js_bottom %}{% endblock %}
   </body>
 </html>
