--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -29,7 +29,7 @@
     <h2>Subway map</h2>
     {% include "simplekey/subway.html" %}
 {% endblock %}
-{% block js_footer %}
+{% block js_bottom %}
 
 <script>
 dojo.require('gobotany.simplekey_page');
