--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -21,7 +21,7 @@
     {% include "simplekey/subway.html" %}
   </div>
 {% endblock %}
-{% block js_footer %}
+{% block js_bottom %}
 
 <script>
 dojo.require('gobotany.simplekey_page');
