--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -28,7 +28,7 @@
   </div>
   {% include "simplekey/filters.html" %}
 {% endblock %}
-{% block js %}
+{% block js_bottom %}
   <script>
     dojo.require('gobotany.sk.results');
     dojo.addOnLoad(function() {
