Move JS code for the page and pilegroup views to the new sk/ subdirectory (a place for simple key UI-specific JS code).
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@173 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -24,6 +24,6 @@
 {% block js_bottom %}
 
 <script>
-dojo.require('gobotany.simplekey_page');
+dojo.require('gobotany.sk.simplekey_page');
 </script>
 {% endblock %}
