Connect results page to the start pages.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@174 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -1,13 +1,9 @@
 {% extends "simplekey/base.html" %}
 {% block title %}
-{% if pile_group %}
-  {{ pile_group.name }}:
-{% endif %}
-{{ pile.name }}
+{{ pilegroup.name }}: {{ pile.name }}
 {% endblock %}
 {% block content %}
-  <h1>{% if pile_group %}{{ pile_group.name }}:{% endif %}
-      {{ pile.name }}</h1>
+  <h1>{{ pilegroup.name }}: {{ pile.name }}</h1>
   <div id="main">
     <div id="global-filter">
       <form>
@@ -25,6 +21,10 @@
     </div>
     {% include "simplekey/filter_working.html" %}
     {% include "simplekey/plants.html" %}
+    <div id="subway">
+      <h2>Subway map</h2>
+      {% include "simplekey/subway.html" %}
+    </div>
   </div>
   {% include "simplekey/filters.html" %}
 {% endblock %}
