Improve filter click event and object passing. Add ARIA attributes to filter working area.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@179 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -62,6 +62,10 @@ p {
     margin: 1.5em 0 1.5em 1em;
 }
 
+#filters li a {
+    color: #00e;
+}
+
 #head, #foot, #plants {
     border: 1px dashed #ddd;
     color: #ddd;
