--- a/gobotany/simplekey/templates/simplekey/filter_working.html
+++ b/gobotany/simplekey/templates/simplekey/filter_working.html
@@ -1,4 +1,4 @@
-<div id="filter-working">
+<div id="filter-working" aria-live="polite" aria-relevant="additions removals">
   <a class="close" href="#">[x]</a>
   <h3 class="name"></h3>
   <div class="values">
